--- a/src/app/pages/assignment-day4/assignment-day4.component.scss
+++ b/src/app/pages/assignment-day4/assignment-day4.component.scss
@@ -20,6 +20,10 @@
     padding: 10px 12px 10px 12px;
     //border: 0;
     border-radius: 5px;
+    cursor: pointer;
+  }
+  [disabled]{
+    cursor: not-allowed;
   }
   .btn-inc{
     background-color: #61ca5c;
