--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,38 @@
-<router-outlet></router-outlet>
+<!-- MatToolbar -->
+<mat-toolbar>
+  <button mat-icon-button (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Assignment Day-21</span>
+  <button mat-button routerLink="/member/register">
+    Day 11
+  </button>
+  <button mat-button routerLink="/day12">
+    Day 12
+  </button>
+  <button mat-button routerLink="/day14">
+    Day 14
+  </button>
+</mat-toolbar>
+<!-- /MatToolbar -->
+
+<!-- MatSideNav -->
+<mat-sidenav-container>
+  <mat-sidenav mode="side" #sidenav [(opened)]="opened">
+    <mat-list role="list">
+      <mat-list-item role="listitem">
+        <a routerLink="/member/register" routerLinkActive="active"> Day 11</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a routerLink="/day12" routerLinkActive="active"> Day 12</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a routerLink="/day14" routerLinkActive="active"> Day 14</a>
+      </mat-list-item>
+    </mat-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+<!-- /MatSideNav -->
