--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,18 @@
 <!-- MatToolbar -->
-<mat-toolbar>
+<mat-toolbar *ngIf="showNavBar">
   <button mat-icon-button (click)="sidenav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Assignment Day-21</span>
-  <button mat-button routerLink="/member/register">
+  <button mat-button routerLink="/login">
+    Login
+  </button>
+  <button mat-button routerLink="/member/register" routerLinkActive="active">
     Day 11
   </button>
-  <button mat-button routerLink="/day12">
+  <button mat-button routerLink="/day12" routerLinkActive="active">
     Day 12
   </button>
-  <button mat-button routerLink="/day14">
+  <button mat-button routerLink="/day14" routerLinkActive="active">
     Day 14
   </button>
 </mat-toolbar>
