--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,14 @@
   <button mat-button routerLink="/login">
     Login
   </button>
-  <button mat-button routerLink="/member/register" routerLinkActive="active">
-    Day 11
-  </button>
   <button mat-button routerLink="/day12" routerLinkActive="active">
     Day 12
   </button>
   <button mat-button routerLink="/day14" routerLinkActive="active">
     Day 14
+  </button>
+  <button mat-button routerLink="/day20" routerLinkActive="active">
+    Day 20
   </button>
 </mat-toolbar>
 <!-- /MatToolbar -->
