#day24 (change button text from "Login" to "Submit" at "Post Action" page. )

--- a/src/app/pages/post-control/post-control.component.html
+++ b/src/app/pages/post-control/post-control.component.html
@@ -18,7 +18,7 @@
     <!-- /Author -->
 
     <div class="login-btn">
-      <button mat-flat-button type="submit" [disabled]="!postActionForm.valid" color="primary">Login</button>
+      <button mat-flat-button type="submit" [disabled]="!postActionForm.valid" color="primary">Submit</button>
     </div>
   </form>
 </div>
